<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/linearMargin"
        android:orientation="vertical"
        tools:context="com.example.dating_app.MainActivity">


        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding10"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height_thirty"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding10"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height_thirty"/>


        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding10"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height_thirty"/>

        <EditText
            android:id="@+id/occupation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding10"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/your_occupation"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height_thirty"/>

        <EditText
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding10"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/info"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height_thirty"/>


        <TextView
            android:id="@+id/date"
            android:layout_width="218dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:ems="10"
            android:textSize="17sp"
            android:hint="@string/date" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height_thirty"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding10"
            android:layout_gravity="center"
            android:ems="10"
            android:onClick="openSecondActivity"
            android:text="@string/sign_up" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height_thirty"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/edit_text_padding10"
            android:layout_gravity="center"
            android:ems="10"
            android:text="@string/fernandez_maria_4_27_2021" />

    </LinearLayout>

</ScrollView>